--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -23,5 +23,60 @@
         "example" : "8"
       }
     }
+  },
+
+  "buttonNow": {
+    "message": "Strike hour now",
+    "description": "Button to sound the bell now"
+  },
+
+  "muteLegend": {
+    "message": "Mute",
+    "description": "Button group to mute the bell"
+  },
+
+  "muteNext": {
+    "message": "Next series",
+    "description": "Button to mute next series of strikes"
+  },
+
+  "muteWatch": {
+    "message": "Until end of watch",
+    "description": "Button to mute strikes until end of this watch (4 hour period)"
+  },
+
+  "muteRestart": {
+    "message": "Until browser restart",
+    "description": "Button to mute strikes until the browser is restarted"
+  },
+
+  "mutePermanent": {
+    "message": "Until manually enabled",
+    "description": "Button to mute strikes until manually enabled again"
+  },
+
+  "buttonUnmute": {
+    "message": "Unmute",
+    "description": "Button to resume bell strikes"
+  },
+
+  "notificationLegend": {
+    "message": "Choose method of notifying",
+    "description": "Controls group to select method of notifying when the bell is struck"
+  },
+
+  "notificationBoth": {
+    "message": "Sound and notification",
+    "description": "Play sound and show notification when bell is struck"
+  },
+
+  "notificationSound": {
+    "message": "Sound only",
+    "description": "Only play sound when bell is struck"
+  },
+
+  "notificationPopup": {
+    "message": "Notification only",
+    "description": "Only show notification when bell is struck"
   }
 }
